src/app/views/recipe-view/recipe-view.component.scss
@import "../../../styles.scss";

.content {
  position: absolute;
  top: 15px;
  height: calc(100% - 30px - 56px - 40px);
  width: calc(100% - 30px - 40px);
  background-color: white;
  border-radius: 25px;
  left: 15px;
  padding: 20px;

  .bar {
    margin-left: calc(50% - 40px);
    width: 80px;
    height: 3px;
    border-radius: 2px;
    background-color: #C7BDBD;
  }
  .imagecontainer {
    position: relative;
    font-size: get-vws(5);
    line-height: get-vws(5);
    text-align: center;
    .image {
      width: 100%;
      height: 35%;
      margin-top: 18px;
      object-fit: cover;
      border-radius: 25px;
    }
    .title {
      backdrop-filter: blur(3.5px);
      padding: get-vws(4) get-vws(6.3);
      border-radius: calc(15px + 25px);
      font-family: montserrat;
      position: absolute;
      top: 50%;
      left: 50%;
      color: white;
      font-weight: bold;
      background-color: rgba(0, 0, 0, .42);
      transform: translate(-50%, calc(-50% + 20px));
    }
  }
  .steps {
    width: 50%;
    margin-left: 50%;
    display: flex;
    flex-grow: left;
    
    .step {
      opacity: 0;
      &:first-child {
        opacity: 1;
      }
      margin-left: 8px;
      display: block;
      font-family: light;
      margin-top: 20px;
      font-size: get-vws(5);
      letter-spacing: .5px;
      .stepbox {
        padding: 20px;
        margin-top: 20px;
        width: calc(100% - 60px);
        //height: calc(50% - 50px - 30px - 40px);
        border: solid #C4C4C4 2px;
        border-radius: 20px;
        .step_content {
          font-family: regular;
          font-size: 20px;
          margin: auto;
        }
      }
    }
  }
  .bottom_bar {
    position: absolute;
    bottom: 50px;
    width: calc(100% - 40px);
    .bottom {
      margin-top: 20px;
      display: flex;
      div {
        border: solid #C4C4C4 2px;
        border-radius: get-vws(3);
        padding: 10px;
        width: 100%;
      }
      .time {
        img {
          height: get-vws(8);
        }
        label {
          font-family: light;
          font-size: 22px;
          margin: auto;
        }
        margin-right: 20px;
        display: flex;
      }
    }
  }
  .arrow {
    width: 25px;
    height: 25px;
    bottom: 15px;
    left: 50%;
    transform: translateX(-50%);
    position: absolute;
  }
}

